DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/GSMMRCMonthlyBudget__c.field-meta.xml
<CustomField>
    <fullName>GSMMRCMonthlyBudget__c</fullName>
    <label>GSM MRC Monthly Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>