DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/ICTMRCMonthlyBudget__c.field-meta.xml
<CustomField>
    <fullName>ICTMRCMonthlyBudget__c</fullName>
    <label>ICT MRC Monthly Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>