DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/Is_in_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Is_in_Current_FY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is in Current FY</label>
    <type>Checkbox</type>
</CustomField>