DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Market Monthly Budgets</relationshipLabel>
    <relationshipName>Market_Monthly_Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>