DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Market Monthly Budgets</relationshipLabel>
    <relationshipName>Market_Monthly_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>