DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/OTCMonthlyBudget__c.field-meta.xml
<CustomField>
    <fullName>OTCMonthlyBudget__c</fullName>
    <label>OTC MonthlyBudget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>