DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/fields/TotalMonthlyBudget__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyBudget__c</fullName>
    <formula>GSMMRCMonthlyBudget__c  +  OTCMonthlyBudget__c +  ICTMRCMonthlyBudget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MonthlyBudget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>