DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/recordTypes/Recurring_Revenue.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Revenue</fullName>
    <active>true</active>
    <label>Recurring Revenue</label>
</RecordType>