DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/recordTypes/Roll_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Roll_Forecast</fullName>
    <active>true</active>
    <label>Roll Forecast</label>
</RecordType>