DigicielFull/force-app/main/default/objects/Market_Monthly_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Budget_Month_Date__c</columns>
    <columns>GSMMRCMonthlyBudget__c</columns>
    <columns>OTCMonthlyBudget__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Market_Monthly_Budget__c.Budget</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>